# Prism

./: .gitignore  LICENSE  README.md  chat.sh  check.py  compare.py  environment.yml  eval.sh  example.py  list.py  pyproject.toml  requirements.txt  run.py  same_train.py  setup.cfg  train.sh  want.md
PEFT/: mapping.py  peft_model.py
PEFT/peft/: __init__.py  mapping.py  peft_model.py
PEFT/peft/tuners/: ia3.py  (+11 more)
PEFT/tuners/: __init__.py
PEFT/utils/: __init__.py  config.py  llava_peft_scope.py  other.py  peft_scope_defaults.py  peft_target_modules.py  save_and_load.py
SAME/peft/: mapping.py  peft_model.py  shared.py
VizWiz/last/: Result.text
backbone/shared/: __init__.py  model_loading.py  peft_llm_targets.py  runtime_logging.py
common/: __init__.py  config_loader.py  conversation.py  data_manager.py  data_processor.py  file_manager.py  load_backbone.py  load_checkpoint.py  load_config.py  load_model.py  logging.py  peft_utils.py  save_checkpoint.py  utils.py
config/: paths_config.py  peft_scope_defaults.py  run_config.py  train_config.py
config/backbone/: __init__.py  constants.py  llava.py
config/backbones/: __init__.py  constants.py  llava.py
config/benchmarks/: CoIN.py  CoIN_full.py  CoIN_sub.py  TriGap.py  UCIT.py  __init__.py  sub_dataset.py
config/methods/: __init__.py  clmoe.py  disco.py  ewc.py  ft_lora.py  hide_llava.py  modal_prompt.py  moelora.py  olora.py  replay_lora.py  same.py  sefe.py  simple_prompt.py  smolora.py  zeroshot.py
config/paths/: llava_paths.py  paths.py  paths_config_base.py  paths_config_instruct.py
core/: __init__.py  config_loader.py  load_model.py
docs/: README.md  index.html
llava/eval/: eval_caption.py  eval_deepseek_r1.py  eval_imagenet.py  eval_science_qa.py  inference_engine.py  model_others.py  model_science_qa.py  model_unified.py  task_adapters.py
llava/model/: builder.bkup  builder.py  llava_arch.py
llava/train/: llava_trainer.py  train.py  train_MOE.py
method/: factory.py
method/base/: callback.py  cl_model.py  context.py  hooks.py  integration.py  peft_extension.py  peft_llm_targets.py  prompt.py  router.py
method/custom/: __init__.py  specialized_integration.py
method/hide_llava/: __init__.py  integration.py
method/moelora/: __init__.py  integration.py
method/same/: integration.py
method/sefe/: integration.py
method/simple_prompt/: __init__.py  integration.py
method/smolora/: __init__.py  integration.py
method/zeroshot/: __init__.py  integration.py
requirements/: README.md  base.txt  eval.txt  flash-attn.txt  torch.txt  train.txt
scripts/: chat_robot.sh  eval.sh  eval_merge_jsonl.py  print_checkpoint_anchor_norms.py  run_methods_sequential.py  run_task.py  train.sh  verify_olora_components.py
scripts/Eval_CoIN/: 1_ScienceQA.sh  2_TextVQA.sh  3_ImageNet.sh  4_GQA.sh  5_VizWiz.sh  8_OCRVQA.sh
tools/: eval_task.py  train_task.py
utils/: __init__.py  check_style.py  check_weights.py  clear1.py  eval_merge_jsonl.py  rank.py  sub_dataset.py
(+93 files in other folders)
